@@ -279,6 +279,12 @@
 	PR tree-optimization/53636
 	* gcc.target/arm/pr53636.c: New test.
 
+2012-06-13  Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.dg/tree-ssa/ivopts-2.C: Adjust for coalescing.
+	* gcc.dg/tree-ssa/forwprop-11.c: Likewise.
+	* gcc.dg/tree-ssa/ssa-fre-1.c: Likewise.
+
 2012-08-31  Ollie Wild  <aaw@google.com>
 
 	PR c++/54197
